--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
 	</head>
 	<body>
 		<h1>Atividade Git</h1>
+
+		<ul>
+			Comandos usados
+
+			<li>git clone https://github.com/IgorParra/devops-aula-03</li>
+			<li>git add index.html</li>
+			<li>git commit -m "commit inicial"</li>
+			<li>git push</li>
+		</ul>
 	</body>
 </html>
